fix: better alignment of background with its parent

--- a/src/components/NavigationItems.module.scss
+++ b/src/components/NavigationItems.module.scss
@@ -5,14 +5,19 @@
   justify-content: space-between;
   text-decoration: none;
   transition: 0.2s ease-out;
-  padding: 0.5rem 0;
-  margin-left: calc((0.5rem * var(--depth)) + var(--depth-space));
+  padding: 0.5rem;
+  margin: 0 -0.5rem;
+  margin-left: calc((0.5rem + 1em) * -1);
+  border-radius: 0.25rem;
+  padding-left: calc(0.5rem + 1em);
 
   &:not(.isCurrentPage):hover {
     color: var(--primary-text-hover-color);
   }
 
   [data-depth='0'] > & {
+    padding-left: 0.5rem;
+    margin-left: -0.5rem;
     font-weight: 600;
   }
 }
@@ -68,7 +73,12 @@ button.navLink {
 }
 
 .isCurrentPage {
+  background: var(--color-neutrals-100);
   color: var(--primary-text-hover-color);
+
+  :global(.dark-mode) & {
+    background: var(--color-dark-100);
+  }
 }
 
 .isPartiallyCurrent {
